; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/zd1211rw/extr_zd_mac.c_zd_mac_free_cur_beacon.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/zd1211rw/extr_zd_mac.c_zd_mac_free_cur_beacon.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zd_mac = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.zd_mac*)* @zd_mac_free_cur_beacon to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @zd_mac_free_cur_beacon(%struct.zd_mac* %0) #0 {
  %2 = alloca %struct.zd_mac*, align 8
  store %struct.zd_mac* %0, %struct.zd_mac** %2, align 8
  %3 = load %struct.zd_mac*, %struct.zd_mac** %2, align 8
  %4 = getelementptr inbounds %struct.zd_mac, %struct.zd_mac* %3, i32 0, i32 0
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = call i32 @mutex_lock(i32* %5)
  %7 = load %struct.zd_mac*, %struct.zd_mac** %2, align 8
  %8 = call i32 @zd_mac_free_cur_beacon_locked(%struct.zd_mac* %7)
  %9 = load %struct.zd_mac*, %struct.zd_mac** %2, align 8
  %10 = getelementptr inbounds %struct.zd_mac, %struct.zd_mac* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = call i32 @mutex_unlock(i32* %11)
  ret void
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @zd_mac_free_cur_beacon_locked(%struct.zd_mac*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
